--- a/ci-cmake-compile/Dockerfile
+++ b/ci-cmake-compile/Dockerfile
@@ -1,4 +1,3 @@
 FROM gcc:latest
-RUN apt-get --yes update
-RUN apt-get install --yes cmake gettext cpputest gcovr cppcheck libxml2-utils valgrind
+RUN apt-get --yes update && apt-get install --yes cmake gettext cpputest gcovr cppcheck libxml2-utils valgrind
 CMD /bin/bash
